# sbe

./: .gitignore  .sbe.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  action.yml
.github/workflows/: build.yml  release-cli.yml  test-cli.yml  verify-attacks.sh
apps/cli/: Cargo.toml
apps/cli/src/: audit.rs  cli.rs  executor.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  detect.rs  error.rs  lib.rs  sbpl.rs
crates/core/src/profile/: defaults-linux.yaml  defaults-macos.yaml  defaults.yaml  elixir.rs  java.rs  mod.rs  node.rs  python.rs  rust.rs
crates/core/src/sandbox/: mod.rs
crates/core/src/sandbox/linux/: exec.rs  landlock.rs  mod.rs  policy.rs  probe.rs  seccomp.rs
crates/core/src/sandbox/macos/: exec.rs  mod.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: allowlist.rs  error.rs  lib.rs  server.rs
crates/proxy/tests/: proxy_integration.rs
docs/: arch.md  index.md
fixtures/: .gitignore  ATTACKS.md
fixtures/elixir/: mix.exs
fixtures/elixir/lib/: test_bad.ex
fixtures/gradle/: build.gradle.kts  settings.gradle.kts
fixtures/gradle/src/main/java/com/sbetest/: App.java
fixtures/node/: check.js  package-lock.json  package.json
fixtures/python/: hatch_build.py  pyproject.toml
fixtures/rust/: Cargo.toml  build.rs
fixtures/scala/: build.sbt
fixtures/scala/src/main/scala/com/sbetest/: App.scala  Greeter.scala  HelloService.scala  Main.scala
fixtures/scala/src/test/scala/com/sbetest/: GreeterSpec.scala  HelloServiceSpec.scala
specs/: cross-platform-backend-design.md  index.md  sbe-design.md  sbe-impl-plan.md  sbe-prd.md
