[workspace]
members = ["crates/*", "apps/*"]
resolver = "3"

[workspace.package]
version = "0.3.1"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/tyrchen/sbe"
homepage = "https://github.com/tyrchen/sbe"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6", features = ["derive"] }
dirs = "6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tempfile = "3.27"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "signal",
    "process",
    "fs",
    "sync",
    "time",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }

# Linux-only deps for the Landlock + seccomp backend.
libc = "0.2"
landlock = "~0.4"
seccompiler = "~0.5"

# workspace crates
sbe-core = { path = "crates/core", version = "0.3" }
sbe-proxy = { path = "crates/proxy", version = "0.3" }
