[package]
name = "sbe-core"
description = "Core library for sbe — cross-platform sandbox executor for supply chain defense"
categories = ["development-tools"]
keywords = ["sandbox", "security", "macos", "linux", "supply-chain"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
dirs.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
tempfile.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
landlock.workspace = true
libc.workspace = true
seccompiler.workspace = true
