[project]
name = "test-bad-py"
version = "0.1.0"
description = "SSH key read test via build hook"
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["test_bad_py"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
